Modified header and footer navigation bars. Added hover border to search bar.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </article>
 
         <footer>
+            <div class="France">France</div>
             <nav class="left">
                 <a href="#">Advertising</a>
                 <a href="#">Business</a>
