--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <ul>
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a href="#">Apps</a></li>
+                <li><a href="#"><img src="googleapp_image_small.png" alt="Apps"></a></li>
                 <li><a href="#">Sign in</a></li>
             </ul>
         </nav>
@@ -31,7 +31,6 @@
         </article>
 
         <footer>
-            <div class="France">France</div>
             <nav class="left">
                 <a href="#">Advertising</a>
                 <a href="#">Business</a>
